add_subdirectory(file_io_stl)
if(USE_NPATCH_LIB)
        add_subdirectory(file_io_npt)
endif()
add_subdirectory(search_polygon)
add_subdirectory(attribute)
add_subdirectory(move_polygon)
add_subdirectory(multi_bbox)
add_subdirectory(load_reduce_mem)
if(TEST_C)
        add_subdirectory(c_interface)
endif()
if(TEST_FORTRAN)
        add_subdirectory(f_interface)
endif()

